--- a/besluit.tex
+++ b/besluit.tex
@@ -1,2 +1,32 @@
 \chapter{Besluit}
 \label{besluit}
+
+Dependent types zijn expressief en kunnen vele eigenschappen die we anders
+ongezegd laten, duidelijk en correct formaliseren zonder veel moeite. De
+afweging tussen moeite en statische garanties verdwijnt zeker niet maar is well
+redelijk flexibel te bepalen. Gewoon met vectoren werken in plaats van lijsten
+kost eigenlijk geen moeite en kan wel al mooie eigenschappen opleveren.
+Uiteindelijk moet de afweging voorlopig nog vaak gemaakt worden op basis van
+ervaring. Dependent types zijn nog niet zolang terug te vinden in \emph{echte}
+programmeertalen en er zijn daardoor nog geen regels die we kunnen volgen over
+hoeveel statische verificatie het grootste voordeel biedt tegenover de kleinste
+inspanning. 
+
+Wat we ook gezien hebben is dat, ook al zijn talen met dependent types nog niet
+klaar voor algemeen gebruik, de ideeën die we erin opdoen gedeeltelijk
+toepasbaar zijn in een taal zoals Haskell. Leren programmeren met dependent
+types is dus geen tijdverspilling. Het heeft een dieper inzicht in het gebruik
+van typisch in andere talen tot gevolg. En de technieken kunnen af en toe ook
+overgezet worden naar die talen. 
+
+De gevalstudies hebben laten zien dat bepaalde concepten helemaal niet moeilijk
+te formaliseren zijn met dependent types. En dat door redelijk eenvoudige
+formalisaties toch redelijk wat fouten kunnen worden voorkomen. We hebben ook
+gezien dat Haskell redelijk ver te drijven is naar het dependently typed
+programmeren, ook al wordt het steeds lastiger hoe dichter we bij dependent
+types proberen komen. Hoewel ontwikkelingen zoals het singleton package voor
+verbetering kunnen zorgen. Wat misschien nog de belangrijkste conclusie uit de
+gevalstudies is, is dat als we een kleine toegeving doen op de precisie van de
+types, we af en toe een grote vermindering van inspanning kunnen krijgen. En
+zolang de meeste eigenschappen nog in het typesysteem uitgedrukt zijn, kunnen
+we die uit ons hoofd zetten en nadenken over belangrijkere problemen.
