--- a/inleiding.tex
+++ b/inleiding.tex
@@ -4,8 +4,8 @@
 In deze thesis worden twee programmeertalen met een sterk typesysteem
 vergeleken. Dit met een nadruk op het typesysteem van de talen, eerder dan de
 talen zelf. Het gaat hier om twee functionele programmeertalen: Agda
-\ref{agda}, een dependently typed programmeertaal, en Haskell \ref{haskell},
-een taal met een Hindley-Milner \ref{hindmil} typesysteem.
+\cite{agda}, een dependently typed programmeertaal, en Haskell \cite{haskell},
+een taal met een Hindley-Milner \cite{hindley} typesysteem.
 
 
 \section{Typesystemen}
@@ -28,9 +28,9 @@ verduidelijken dat een functie een naam verwacht in plaats van gewoon een
 string, wat het type is voor een opeenvolging van karakters.
 
 Er is een grote variatie aan bestaande typesystemen. Het typesysteem voor de
-programmeertaal C \ref{C} heeft eenvoudige types die in direct verband staan
+programmeertaal C \cite{C} heeft eenvoudige types die in direct verband staan
 met de voorstelling van de bijhorende waarden op het niveau van bits en bytes.
-Het typesysteem van Java \ref{Java} daarentegen is volledig gericht op de
+Het typesysteem van Java \cite{Java} daarentegen is volledig gericht op de
 objectgeoriënteerde metafoor: een object wordt gedefinieerd door een klasse en
 die klasse \emph{is} tevens het type voor dat object. Het Hindley-Milner
 typesysteem wordt vaak gebruikt als basis voor het typesysteem van functionele
@@ -46,7 +46,7 @@ uitbreidingen maken het typesysteem expressiever.
 \section{Dependent Types}
 
 Dependent types zijn nauw verbonden met de Curry-Howard correspondence
-\ref{curryhow}. Ze breiden het verband tussen types en propositielogica uit tot
+\cite{curryhow}. Ze breiden het verband tussen types en propositielogica uit tot
 een predicatenlogica door het mogelijk te maken om de logische kwantoren voor
 te stellen. Het verschil met andere typesystemen is dat een dependent type kan
 afhangen van waarden, zo kan het type van een lijst afhangen van de lengte van
@@ -68,7 +68,7 @@ impliciet laten - en dus in het achterhoofd moeten houden - expliciet te maken
 en zo door het typesysteem te laten nakijken.
 
 De typentheorie waarop Agda gebaseerd is, gelijkt op de intuïtionistische
-typentheorie van Per Martin-Löf \ref{martinlof}. In deze thesis laten we dit
+typentheorie van Per Martin-Löf \cite{martinlof}. In deze thesis laten we dit
 echter terzijde en bekijken we Agda als een programmeertaal met dependent types
 in tegenstelling tot Haskell, wat als voorbeeld dient voor een programmeertaal
 die in de praktijk toegepast wordt voor grootschalige systemen. Deze
