--- a/masterproef.tex
+++ b/masterproef.tex
@@ -1,14 +1,18 @@
-\documentclass[master=cws, oneside]{kulemt}
-\setup{title={Programmeren en Bewijzen met Dependently Typed Talen},
-  author={Toon Nolten},
-  promotor={Dr.\ Dominique Devriese \and Prof.\,dr.\,ir.\ Frank Piessens},
+\documentclass[master=cws, oneside]{kulemt} \setup{title={Programmeren en
+  Bewijzen met Dependently Typed Talen}, author={Toon Nolten}, promotor={Dr.\
+  Dominique Devriese \and Prof.\,dr.\,ir.\ Frank Piessens},
   assessor={Prof.\,dr.\ Marc Denecker \and Dr.\ Thomas Heyman},
-  assistant={Jesper Cockx}}
+assistant={Jesper Cockx}}
 % De volgende \setup mag verwijderd worden als geen fiche gewenst is.
-\setup{filingcard,
-  translatedtitle={TODO: Programming and Proofs in Dependently Typed Languages},
-  udc=681.3,
-  shortabstract={TODO}}
+\setup{filingcard, translatedtitle={Programming and Proofs in Dependently Typed
+  Languages}, udc=681.3, shortabstract={In this thesis we present two case
+    studies, both in Agda, a fully dependently typed programming language, and
+    in Haskell, a functional programming language with a Hindley-Milner style
+    type system. After formulating a model of a problem in Agda, we mimic this
+    model in Haskell, relying on Glasgow Haskell Compiler extensions to provide
+    type system features we lack in standard Haskell. We try to illustrate how
+    much, or little effort goes into static verification. And hint at reducing
+    reliance on test suites by encoding simple properties in your types.}}
 
 % TODO: toggle voor gedrukte versie?
 \usepackage[pdfusetitle,colorlinks,plainpages=false]{hyperref}
@@ -19,6 +23,7 @@
 \usepackage{underscore}
 \usepackage{subcaption}
 \usepackage{import}
+\usepackage{textgreek}
 
 % Missing unicode characters for Agda
 \usepackage{MnSymbol}
@@ -38,14 +43,63 @@
 
 \begin{document}
 
-\begin{preface}
-  TODO
+\begin{preface} Ik heb dit thesisonderwerp gekozen omdat ik erg geïnteresseerd
+  ben in programmeertalen. Van jongs af aan heb ik me altijd afgevraagd hoe
+  dingen werken. Eén van de grootste raadsels was hoe een computer nu eigenlijk
+  werkt. Ik heb redelijk snel geleerd dat een computer eigenlijk niets meer is
+  dan een machine die een stroom van bits omzet in een andere stroom van bits.
+  Niet dat ik daarmee volledig begreep hoe een computer werkt op het niveau van
+  bits en bytes, maar ik kon me er toch iets bij voorstellen. Waar bij mij het
+  interessantste probleem zat was de omzetting van een programma zoals wij het
+  zouden schrijven naar zo een stroom van bits. Stilaan heb ik dan geleerd wat
+  een compiler is en dat bracht eigenlijk alleen meer problemen met zich mee:
+  "Hoe kan de C compiler in C geschreven zijn?" Dit maar om aan te geven dat ik
+  het een fascinerend onderwerp vind. De interesse in dependent types is
+  eigenlijk eerder toevallig gekomen. Ik had de beschrijving van het onderwerp
+  al eens gelezen en daarbij moest ik meteen denken aan hoe het typesysteem van
+  Java mij al had tegengewerkt in vorige opdrachten. Maar ik dacht tegelijk ook
+  aan Haskell wat een veel aangenamer typesysteem heeft. En die dissonantie is
+  eigenlijk de reden dat ik voor dit onderwerp gekozen heb. Waarom is het ene
+  typesysteem eerder aangenaam om mee te werken en het andere niet? En
+  belangrijker nog: "Hoe ver kan een typesysteem gaan?"
+
+  Ik wil ook nog een aantal mensen bedanken. In de eerste plaats mijn
+  begeleider Jesper en mijn promotor Dominique, zij hebben mij tegelijk op het
+  juiste pad gezet en mij veel zelfstandigheid gegeven in wat ik juist wou doen
+  en hoe ik het wou doen. Ook heb ik veel gehad aan discussies in de \#agda en
+  \#haskell IRC kanalen op het freenode netwerk waarbij ik vermijd namen te
+  noemen omdat de kans groot is dat ik iemand vergeet. Verder wil ik mijn vader
+  bedanken die altijd bereid was te luisteren naar een al te vaak ingewikkelde
+  uitleg wanneer ik me een nieuw concept probeerde eigen te maken. Natuurlijk
+  kan ik niet vergeten mijn moeder te bedanken voor het rusteloze aandringen om
+  nu toch eindelijk is aan die thesis te beginnen werken. Tenslotte wil ik mijn
+  grootvaders bedanken die me met hun uitgebreide kennis geïnspireerd hebben om
+  altijd vragen te blijven stellen.
 \end{preface}
 
 \tableofcontents*
 
 \begin{abstract}
-  TODO: Niet Concreet
+  Dependent types vormen een krachtig middel om bepaalde eigenschappen te
+  coderen in het typesysteem. Op deze manier moeten we niet telkens aan alle
+  eigenschappen proberen denken. Wat de computer voor ons kan doen, moeten we
+  zelf niet doen. In programmeertalen is er al lang een tendens om meer door de
+  computer zelf te laten doen, bijvoorbeeld het geheugenbeheer met garbage
+  collectors. Wat typesystemen betreft is dit jammer genoeg nog niet het geval.
+  Er wordt wel onderzoek verricht maar dit komt zelden terecht in een van de
+  talen die voor alledaagse taken worden gebruikt. Haskell is één van de
+  uitzonderingen op deze regel. Het is een taal die zijn nut in de praktijk al
+  bewezen heeft. En die tegelijkertijd nog het onderwerp is van onderzoek om
+  betere technieken te vinden voor onder andere typesystemen en concurrency.
+  Agda staat in vergelijking nog in de kinderschoenen maar dit maakt het ook
+  mogelijk om op een sneller tempo te experimenteren.
+
+  In deze thesis proberen we aan de hand van twee gevalstudies een beter zicht
+  te krijgen op programmeren met dependent types. Waarvoor het nuttig kan zijn:
+  meer concepten uitdrukken op een type safe manier en statisch eigenschappen
+  verifiëren bijvoorbeeld. Wat er aan schort: geen inferentie van types,
+  \emph{verbose}. En hoe een taal die eigenlijk geen dependent types heeft zich
+  verhoudt tot een dependently typed taal.
 \end{abstract}
 
 \mainmatter
@@ -62,11 +116,33 @@
 %%%%%%%%%%%%%%%%%%%%
 \include{besluit}
 
-\appendixpage*          % indien gewenst TODO
+\appendixpage*
 \appendix
 %%%%%%%%%%%%%%%%%%%%
 % Appendices
+\chapter{KoopaTroopas in Agda}
+  \label{app:case-koopa-agda}
+  \inputagda[fontsize=\small, breaklines]{agda-casestt/koopa.agda}
 
+\chapter{KoopaTroopas in Haskell}
+  \label{app:case-koopa-haskell}
+  \inputhaskell[fontsize=\small, breaklines]{haskell-casestt/koopa.hs}
+
+\chapter{Red-Black Trees in Agda}
+  \label{app:case-rbtree-agda}
+  Eerst volgt een redelijk letterlijke vertaling van de code van Okasaki naar
+  Agda om te tonen dat dependent types absoluut niet verplicht zijn.
+  \inputagda[fontsize=\small, breaklines]{agda-casestt/Okasaki.agda}
+  \inputagda[fontsize=\small, breaklines]{agda-casestt/RedBlackTree.agda}
+
+\chapter{Red-Black Trees in Haskell}
+  \label{app:case-rbtree-haskell}
+  Eerst volgt de code van Okasaki dan de code voor de case en daarna nog een
+  korte vertaling van de \iagda{if_the_else_} functie in Agda naar een functie
+  op typeniveau in Haskell.
+  \inputhaskell[fontsize=\small, breaklines]{haskell-casestt/Okasaki.hs}
+  \inputhaskell[fontsize=\small, breaklines]{haskell-casestt/RedBlackTree.hs}
+  \inputhaskell[fontsize=\small, breaklines]{haskell-casestt/if.hs}
 % Appendices
 %%%%%%%%%%%%%%%%%%%%
 
@@ -75,7 +151,7 @@
 %%%%%%%%%%%%%%%%%%%%
 % References
 % Je kan de  standaard "abbrv" bibliografiestijl vervangen door een andere.
-\bibliographystyle{abbrv}
+\bibliographystyle{IEEEtran}
 \bibliography{referenties}
 % References
 %%%%%%%%%%%%%%%%%%%%
