--- a/referenties.bib
+++ b/referenties.bib
@@ -1,12 +1,249 @@
-@Book{h2g2,
-  author =    {Adams, Douglas},
-  title =     {The Hitchhiker's Guide to the Galaxy},
-  publisher = {Del Rey (reprint)},
-  year =      1995,
-  note =      {ISBN-13: 978-0345391803}}
+@inbook{rbtrees,
+  author        = "Thomas H. Cormen and Charles E. Leiserson and Ronald L. Rivest and Clifford Stein",
+  title         = "{Introduction to Algorithms}",
+  edition       = "Second ",
+  publisher     = "MIT Press and McGraw-Hill",
+  year          = "2001",
+  chapter       = "13: Red-Black Trees",
+  pages         = "273-301",
+  note          = "{ISBN} 0-262-03293-7"
+}
 
-@Misc{wiki,
-  author =       {Wikipedia},
-  title =        {Scriptie},
-  howpublished = {URL: \url{http://nl.wikipedia.org/wiki/Masterproef},
-                  laatst nagekeken op 2010-01-07}}
+@article{okasaki,
+  author        = "Chris Okasaki",
+  title         = "{Functional Pearls: Red-Black Trees in a Functional Setting}",
+  journal       = "Journal of Functional Programming",
+  volume        = "9 (04)",
+  month         = jan,
+  year          = "1999",
+  pages         = "471-477"
+}
+
+@electronic{haskell,
+  title         = "{Haskell Language}",
+  url           = "https://www.haskell.org/",
+  month         = jul,
+  year          = "2015"
+}
+
+@electronic{ghc,
+  title         = "{The Glorious Glasgow Haskell Compiler}",
+  url           = "https://www.haskell.org/ghc/",
+  month         = jul,
+  year          = "2015"
+}
+
+@electronic{singletonpack,
+  title         = "{The singletons library}",
+  url           = "http://www.cis.upenn.edu/~eir/packages/singletons/",
+  month         = aug,
+  year          = "2015"
+}
+
+@article{hindley,
+  author        = "Roger Hindley",
+  title         = "{The Principal Type-Scheme of an Object in Combinatory Logic}",
+  journal       = "Transactions of the American Mathematical Society",
+  volume        = "146",
+  month         = dec,
+  year          = "1969",
+  pages         = "29-60"
+}
+
+@article{quickcheck,
+  author        = "Koen Claessen and John Hughes",
+  title         = "{QuickCheck: A Lightweight Tool for Random Testing of Haskell Programs}",
+  journal       = "SIGPLAN Not.",
+  volume        = "35",
+  number        = "9",
+  month         = sep,
+  year          = "2000",
+  pages         = "268-279",
+  publisher     = "ACM"
+}
+
+@electronic{adt,
+  title         = "{Algebraic data type}",
+  url           = "https://wiki.haskell.org/Algebraic_data_type",
+  month         = jul,
+  year          = "2015"
+}
+
+@electronic{gadts,
+  author = "Hongwei Xi and Chiyan Chen and Gang Chen",
+  title = "{Guarded Recursive Datatype Constructors}",
+  journal = "SIGPLAN Not.",
+  volume = "38",
+  number = "1",
+  month = jan,
+  year = "2003",
+  pages = "224-235",
+  publisher = "ACM",
+  address = "New York, NY, USA",
+}
+
+@inbook{kind,
+  author        = "Benjamin Pierce",
+  title         = "{Types and Programming Languages}",
+  publisher     = "MIT Press",
+  year          = "2002",
+  chapter       = "29: Type Operators and Kinding",
+  note          = "{ISBN} 0-262-16209-1"
+}
+
+@electronic{datakinds,
+  title         = "{Datatype Promotion}",
+  url           = "https://downloads.haskell.org/~ghc/7.6.3/docs/html/users_guide/promotion.html",
+  month         = jul,
+  year          = "2015"
+}
+
+@electronic{typefam,
+  title         = "{Type families}",
+  url           = "https://downloads.haskell.org/~ghc/7.6.3/docs/html/users_guide/type-families.html",
+  month         = jul,
+  year          = "2015"
+}
+
+@electronic{patguard,
+  title         = "{Pattern guard}",
+  url           = "https://wiki.haskell.org/Pattern_guard",
+  month         = jul,
+  year          = "2015"
+}
+
+@electronic{typeops,
+  title         = "{Type Operators}",
+  url           =
+    "https://downloads.haskell.org/~ghc/7.6.3/docs/html/users_guide/data-type-extensions.html",
+  month         = jul,
+  year          = "2015"
+}
+
+@inproceedings{agda,
+  author = "Ulf Norell",
+  title = "{Dependently Typed Programming in Agda}",
+  booktitle = "{Proceedings of the 6th International Conference on Advanced Functional Programming}",
+  series = "AFP'08",
+  year = "2009",
+  note = "{ISBN-10} 3-642-04651-7, {ISBN-13} 978-3-642-04651-3",
+  location = "Heijen, The Netherlands",
+  pages = "230-266",
+  publisher = "Springer-Verlag",
+  address = "Berlin, Heidelberg",
+}
+
+@article{indfam,
+  author = "Peter Dybjer",
+  title = "{Inductive Families}",
+  journal = "Formal Aspects of Computing",
+  year = "1997",
+  volume = "6",
+  pages = "440-465"
+}
+
+@book{C,
+  author        = "Brian Kernighan \and Dennis Ritchie",
+  title         = "{The C Programming Language}",
+  edition       = "Second"
+  publisher     = "Prentice Hall",
+  year          = "1988",
+  note          = "{ISBN} 0-13-110362-8"
+}
+
+@electronic{Java,
+  title         = "{The Java Language Specification, Java SE 8 Edition}",
+  url           = "https://docs.oracle.com/javase/specs/jls/se8/html/index.html",
+  month         = aug,
+  year          = "2015"
+}
+
+@inproceedings{curryhow,
+  author = "Haskell Curry",
+  title = "{Functionality in Combinatory Logic}",
+  booktitle = "{Proceedings of the National Academy of Sciences}",
+  series = "20",
+  year = "1934",
+  pages = "584-590",
+}
+
+@book{martinlof,
+  author        = "Per Martin-Löf",
+  title         = "{Intuitionistic Type Theory}",
+  publisher     = "Bibliopolis",
+  year          = "1984",
+  note          = "{ISBN} 88-7088-105-9"
+}
+
+@electronic{agda:stdlib,
+  title         = "{The Agda Standard Library}",
+  url           =
+    "http://wiki.portal.chalmers.se/agda/pmwiki.php?n=Libraries.StandardLibrary",
+  month         = aug,
+  year          = "2015"
+}
+
+@article{TPoP,
+  author = "Nicolas Oury \and Wouter Swierstra",
+  title = "{The Power of Pi}",
+  year = "2008",
+}
+
+@book{sml,
+  author        = "Robin Milner \and Mads Tofte \and Robert Harper \and David
+    MacQueen",
+  title         = "{The Definition of Standard ML (Revised)}",
+  publisher     = "MIT Press",
+  year          = "1997",
+  note          = "{ISBN} 0-262-63181-4"
+}
+
+@electronic{ocaml,
+  title         = "{The OCaml system}",
+  url           = "http://caml.inria.fr/pub/docs/manual-ocaml/",
+  author        = "Xavier Leroy",
+  month         = aug,
+  year          = "2015"
+}
+
+@electronic{mario,
+  title         = "{Mario}",
+  url           = "https://en.wikipedia.org/wiki/Mario",
+  month         = aug,
+  year          = "2015"
+}
+
+@electronic{nintendo,
+  title         = "{Nintendo}",
+  url           = "https://www.nintendo.com/",
+  month         = aug,
+  year          = "2015"
+}
+
+@electronic{supmario,
+  title         = "{Super Mario Bros.}",
+  url           = "https://en.wikipedia.org/wiki/Super_Mario_Bros.",
+  month         = aug,
+  year          = "2015"
+}
+
+@electronic{marioglitchyoutube,
+  title         = "{How to Jump Over the Flagpole on stage 1-1 in Super Mario
+    Bros}",
+  url           = "https://youtu.be/dzlmNdP-ApU",
+  month         = aug,
+  year          = "2015"
+}
+
+@article{hasochism,
+  author = "Sam Lindley \and Conor McBride",
+  title = "{Hasochism: The Pleasure and Pain of Dependently Typed haskell
+    Programming}",
+  year = "2008",
+}
+
+@article{hkynio,
+  author = "Conor McBride",
+  title = "{How to Keep Your Neighbours in Order}",
+  year = "2008",
+}
